--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@config-plugins/react-native-webrtc": "^9.0.0",
     "@expo/vector-icons": "^14.0.2",
+    "@miblanchard/react-native-slider": "^2.6.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.22",
+    "expo-av": "~14.0.6",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
+    "expo-screen-orientation": "~7.0.5",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -30,10 +34,17 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-video": "^6.4.3",
+    "react-native-web": "~0.19.10",
+    "react-native-webrtc": "^124.0.3",
+    "react-native-webview": "13.8.6",
+    "socket.io-client": "^4.7.5",
+    "@react-native-community/slider": "4.5.2",
+    "expo-checkbox": "~3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
